edited history to prevent overflowing

--- a/src/styles/Dashnav.css
+++ b/src/styles/Dashnav.css
@@ -13,12 +13,13 @@
 .side-links-layout{
     display: flex;
     flex-direction: column;
-    width: 12%;
+    width: 15%;
     /* height: 100%; */
     background-color: #F2F4F6;
     gap: 2rem;
     padding: 1rem 1rem;
     border: 0.8px rgb(222, 222, 222) solid;
+    
 }
 .side-links-layout *{
     background-color: #F2F4F6;
@@ -37,6 +38,7 @@
     gap: 1.5rem;
     font-family: 'Roboto';
     font-weight: 600;
+    max-width: fit-content;
 }
 
 .side-links a, .last-dash-link {
@@ -49,7 +51,11 @@
     color: black;
     border-radius: 2rem;
     padding: 0.5rem 1rem;
-    width: 6.8rem;
+    width: 90%;
+    max-width: 100%;
+    word-break: break-all;
+    white-space: normal;
+    overflow: hidden;
 }
 
 .last-dash-link{
@@ -65,7 +71,7 @@
     font-weight: 600;
     color: black;  
     background-color: #c5c5c5;
-    width: 6.8rem;
+    width: 90%;
     border-radius: 2rem;
     padding: 0.5rem 1rem;
     transition: ease-in-out 0.2s;
