--- a/src/styles/History.css
+++ b/src/styles/History.css
@@ -7,6 +7,8 @@
     max-width: 62.8rem;
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    height: 90%;
+    overflow-y: auto;
 }
 
 .search-container {
